# python-project-51

./: .gitignore  README.md  gas159-github-io.html  makefile  pyproject.toml  setup.cfg
.github/workflows/: tezt.yml
page_loader/: __init__.py  browser-info-ru.html  cli.py  exceptions.py  html_processing.py  page_loader.py  relevant_url.py  requests_and_response.py  supports.py  supports_files.py  url.py
page_loader/scripts/: page_loader.py  page_loader_BACKUP_17081.py
tests/: test_down.py  test_download.py
tests/fixtures/: browser-info.html  gas159-github-io.html  original.html
tests/fixtures/expected/: expected.html
tests/fixtures/images/: gas159-github-io-assets-scripts.js  gas159-github-io.html
