[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "download page"
authors = ["Rin Sah <pankot222@gmail.com>"]
readme = "README.md"
packages = [{include = 'page_loader'}]


[tool.poetry.scripts]
page_loader = 'page_loader.scripts.page_loader:main'



[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.15.5"
requests = "^2.27.1"
progress = "^1.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
requests-mock = "^1.10.0"
bs4 = "^0.0.1"
fake-useragent = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
